# bright_star_catalog_cpp

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/: bright_star_catalog_parser.h  bright_start_catalog_parser.h
include/bsc/: bright_star_catalog_parser.h
src/: binary_reader.cpp  binary_reader.h  bright_star_catalog_parser.cpp
test/: bright_star_catalog_parser_test.cpp  bright_start_catalog_parser_test.cpp
test/res/: expected_values.csv
